# mailbox-esp32-aws-iot

./: .gitattributes  .gitmodules  CMakeLists.txt  Kconfig  README.md  partitions.csv  sdkconfig  sdkconfig.old
.git-crypt/keys/default/0/: 9B82847BB875CE688C242F7E0E7D16D48439430B.gpg
.github/workflows/: ota-deploy.yml
main/: CMakeLists.txt  button_handler.c  button_handler.h  door_config.h  door_handler.c  door_handler.h  error_handler.c  error_handler.h  idf_component.yml  led_handler.c  led_handler.h  main.c  mqtt_custom_handler.c  mqtt_custom_handler.h
main/certs/original/: AmazonRootCA1.pem  mailbox-certificate.pem.crt  mailbox-private.pem.key
main/certs/src/: certificate.c  private_key.c  root_ca.c
scripts/github/: gh_config.sh
scripts/ota/: start_ota.sh
